Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3896

Crash in OpenDir::close_write

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 5.3.1, 6.0.0
    • 5.3.2, 6.0.0
    • Cache
    • None

    Description

      gdb) bt full
      #0 0x00000000007269ca in OpenDir::close_write (this=0x2acc5c0171d0, cont=0x2acce09a6970) at CacheDir.cc:144
      h = 2872149697
      b = 193
      #1 0x0000000000724970 in Vol::close_write (this=0x2acc5c017010, cont=0x2acce09a6970) at P_CacheInternal.h:808
      No locals.
      #2 0x0000000000745c6e in CacheVC::openWriteCloseDir (this=0x2acce09a6970) at CacheWrite.cc:1081
      lock =

      {m = {m_ptr = 0x333e1c0}

      , lock_acquired = true}
      func = "openWriteCloseDir"
      #3 0x0000000000746db0 in CacheVC::openWriteClose (this=0x2acce09a6970, event=0, e=0x0) at CacheWrite.cc:1289
      No locals.
      #4 0x00000000007248ab in CacheVC::die (this=0x2acce09a6970) at P_CacheInternal.h:734
      No locals.
      #5 0x000000000071694b in CacheVC::do_io_close (this=0x2acce09a6970, alerrno=0) at Cache.cc:376
      previous_closed = 0
      #6 0x0000000000519ebc in VConnection::do_io (this=0x2acce09a6970, op=4, c=0x0, nbytes=9223372036854775807, cb=0x0, data=0) at ../iocore/eventsystem/P_VConnection.h:105
      No locals.
      #7 0x00000000005fe7ee in HttpCacheSM::abort_write (this=0x2acccc6929c8) at HttpCacheSM.h:114
      No locals.
      #8 0x00000000005fe946 in HttpCacheSM::end_both (this=0x2acccc6929c8) at HttpCacheSM.h:142
      No locals.
      #9 0x00000000005f91fe in HttpSM::kill_this (this=0x2acccc690f90) at HttpSM.cc:6576
      func = "kill_this"
      #10 0x00000000005eb8b3 in HttpSM::main_handler (this=0x2acccc690f90, event=3, data=0x2acd18008898) at HttpSM.cc:2631
      jump_point = (int (HttpSM:(HttpSM *, int, void *)) 0x5e6012 <HttpSM::state_watch_for_client_abort(int, void)>
      func = "main_handler"
      vc_entry = 0x2acccc692858
      #11 0x00000000005106f0 in Continuation::handleEvent (this=0x2acccc690f90, event=3, data=0x2acd18008898) at ../iocore/eventsystem/I_Continuation.h:145
      No locals.
      #12 0x0000000000776b53 in read_signal_and_update (event=3, vc=0x2acd18008780) at UnixNetVConnection.cc:141
      func = "read_signal_and_update"
      #13 0x0000000000776e8e in read_signal_done (event=3, nh=0x2acb84a0d8a0, vc=0x2acd18008780) at UnixNetVConnection.cc:202
      No locals.
      #14 0x0000000000776f46 in read_signal_error (nh=0x2acb84a0d8a0, vc=0x2acd18008780, lerrno=0) at UnixNetVConnection.cc:226
      No locals.
      #15 0x0000000000779929 in UnixNetVConnection::readSignalError (this=0x2acd18008780, nh=0x2acb84a0d8a0, err=0) at UnixNetVConnection.cc:992
      No locals.
      #16 0x000000000075e529 in SSLNetVConnection::net_read_io (this=0x2acd18008780, nh=0x2acb84a0d8a0, lthread=0x2acb84a0a010) at SSLNetVConnection.cc:422
      ret = 10955
      bytes = 0
      s = 0x2acd18008890
      -Type <return> to continue, or q <return> to quit-
      func = "net_read_io"
      buf = @0x2acb86e2cba0
      r = 0
      lock =

      {m = {m_ptr = 0x2acb86e2cb70}

      , lock_acquired = 198}
      ntodo = 7804412
      #17 0x00000000007706ec in NetHandler::mainNetEvent (this=0x2acb84a0d8a0, event=5, e=0x2b91630) at UnixNet.cc:546
      epd = 0x2acd180089a0
      pd = 0x2acb88c11010
      func = "mainNetEvent"
      poll_timeout = 10
      vc = 0x2acd18008780
      #18 0x00000000005106f0 in Continuation::handleEvent (this=0x2acb84a0d8a0, event=5, data=0x2b91630) at ../iocore/eventsystem/I_Continuation.h:145
      No locals.
      #19 0x0000000000797442 in EThread::process_event (this=0x2acb84a0a010, e=0x2b91630, calling_code=5) at UnixEThread.cc:128
      c_temp = 0x2acb84a0d8a0
      lock =

      {m = {m_ptr = 0x2a3ed90}

      , lock_acquired = true}
      #20 0x000000000079794c in EThread::execute (this=0x2acb84a0a010) at UnixEThread.cc:252
      done_one = false
      e = 0x2b91630
      NegativeQueue =

      {<DLL<Event, Event::Link_link>> = {head = 0x0}

      , tail = 0x0}
      next_time = 1439415094080030928
      #21 0x00000000007969ed in spawn_thread_internal (a=0x2a5eef0) at Thread.cc:85
      p = 0x2a5eef0
      #22 0x00002acb7e9029d1 in start_thread () from /lib64/libpthread.so.0

      Attachments

        Activity

          People

            amc Alan M. Carroll
            amc Alan M. Carroll
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: