TS-3896: Fix crash in OpenDir::close_write from unlocked mutex.